test/fails/bad_types/par_basics3.lgl
tag a is vec2;
tag b is vec2;
tag par<`t : vec2> is vec3;

void main() {
    par<a> pa = [1., 2., 3.];
    par<b> fail = pa; // Not a subtype
}